Fixed the login screen on mobile devices to be more friendly for users (increased input and button size, and the form doesn't take up the full width of the device)

--- a/TMNT/Content/login-styles.css
+++ b/TMNT/Content/login-styles.css
@@ -58,10 +58,14 @@
 
 @media (max-width:640px) {
     .vertical-center {
-        min-height: 100%;
-        min-height: 75vh;
-        display: flex;
-        align-items: center;
+        width: 80%;
+        height: 265px;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
     }
 
     .checkbox {
@@ -85,7 +89,7 @@
 
     input:not([type=checkbox]) {
         width:100%;
-        height:35px;
+        height:60px;
     }
 
     #login-title {
@@ -138,15 +142,20 @@
         color:#fff;
         border:1px solid #008997;
         letter-spacing:1px;
+
     }
 }
 
 @media (min-width:641px) and (max-width: 992px) {
-    .vertical-center{
-        min-height: 100%;
-        min-height: 75vh;
-        display: flex;
-        align-items: center;
+    .vertical-center {
+        width: 80%;
+        height: 265px;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto;
     }
 
     .checkbox {
@@ -161,7 +170,7 @@
     #loginForm {
         padding-left: 15px;
         padding-right: 15px;
-        height:235px;
+        height:180px;
     }
 
     #page-wrapper {
@@ -170,7 +179,7 @@
 
     input:not([type=checkbox]) {
         width:100%;
-        height:40px;
+        height:60px;
     }
 
     #login-title {
